Finished lab 1 and cleaned

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,10 @@
 *.out
 *.prop
 *.xyz
+*.ges
 *_property.txt
+
 .vscode
+
+**/.ipynb_checkpoints/**
+Orca/Results/F_B3LYP-Def2-SVP/F_B3LYP-Def2-SVP.ges
